@@ -19,10 +19,11 @@ public class RecipeController {
     public RecipeController(RecipeService recipeService) {
         this.recipeService = recipeService;
     }
-    @RequestMapping("/recipe/show/{id}")
+
+    @RequestMapping("/recipe/{id}/show")
     public String getRecipe(@PathVariable String id, Model model){
 
-        model.addAttribute("recipe",recipeService.findById(new Long(id)));
+        model.addAttribute("recipe",recipeService.findById(Long.valueOf(id)));
         return "recipe/show";
     }
 
@@ -32,9 +33,17 @@ public class RecipeController {
         return "recipe/recipeform";
     }
 
+    @RequestMapping("/recipe/{id}/update")
+    public String updateRecipe(@PathVariable String id,Model model){
+        model.addAttribute("recipe",recipeService.findCommandById(Long.valueOf(id)));
+        return "recipe/recipeform";
+
+    }
+
+
     @PostMapping("/recipe")
     public String saveOrUpdate(@ModelAttribute RecipeCommand recipeCommand){
         RecipeCommand savedCommand=recipeService.saveRecipeCommand(recipeCommand);
-        return "redirect:/recipe/show/"+savedCommand.getId();
+        return "redirect:/recipe/"+savedCommand.getId()+"/show";
     }
 }
